@@ -9,7 +9,7 @@ These strings are not to be localised, so they are here, and not in any of the l
 ]]
 
 -- Global define
-EFM_Version				= "4.1.0-Classic/Cata";
+EFM_Version				= "4.1.1-Classic/Cata";
 
 -- Define some stuff here to handle global stuff...
 EFM_Global_Faction			= UnitFactionGroup("player");
